--- a/bin/ker/Makefile
+++ b/bin/ker/Makefile
@@ -3,7 +3,7 @@ P = /usr/include/python2.7
 Cluster : Cluster.py _Cluster.so;
 
 Cluster.py Cluster_wrap.cxx : Cluster.i Cluster.hpp
-	swig -python -c++ Cluster.i
+	swig -python -c++ -E Cluster.i
 
 Cluster_wrap.o : Cluster_wrap.cxx Cluster.hpp
 	g++ -g -Wall -I$(P) -fPIC -std=c++11 -O3 -c Cluster_wrap.cxx
